--- a/register/index.html
+++ b/register/index.html
@@ -3,81 +3,104 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Registro - Prueba</title>
+<title>Registro - Calvo Games</title>
 <style>
 body {
-  font-family: Arial; 
-  background:#1e1e1e; 
-  color:#fff; 
-  display:flex; 
-  justify-content:center; 
-  align-items:center; 
-  height:100vh; 
-  margin:0; 
+  font-family: Arial;
+  background:#1e1e1e;
+  color:#fff;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  margin:0;
   flex-direction: column;
 }
 .box {
-  background:#2c2c2c; 
-  padding:30px; 
-  border-radius:12px; 
-  width:320px; 
+  background:#2c2c2c;
+  padding:30px;
+  border-radius:12px;
+  width:320px;
   text-align:center;
-  position: relative;
 }
 input {
-  width:90%; 
-  padding:10px; 
-  margin:8px 0; 
-  border-radius:6px; 
+  width:90%;
+  padding:10px;
+  margin:8px 0;
+  border-radius:6px;
   border:none;
 }
 button {
-  width:95%; 
-  padding:10px; 
-  margin:10px 0; 
-  border-radius:6px; 
-  border:none; 
-  background:#ff9800; 
-  color:#fff; 
-  font-weight:bold; 
-  cursor:pointer; 
+  width:95%;
+  padding:10px;
+  margin:10px 0;
+  border-radius:6px;
+  border:none;
+  background:#ff9800;
+  color:#fff;
+  font-weight:bold;
+  cursor:pointer;
   transition: all 0.2s ease;
 }
 button.active {
-  transform: scale(1.1); 
+  transform: scale(1.1);
   background:#e68a00;
 }
 #status {
-  font-size:1em; 
-  margin-top:15px; 
-  padding:10px; 
+  font-size:1em;
+  margin-top:15px;
+  padding:10px;
   border-radius:6px;
 }
 .error {
-  background: #ff4c4c; 
+  background: #ff4c4c;
   color: #fff;
   font-weight:bold;
 }
 .success {
-  background: #4caf50; 
+  background: #4caf50;
   color: #fff;
   font-weight:bold;
+}
+a {
+  color:#ff9800;
+  text-decoration:none;
+  display:block;
+  margin-top:10px;
 }
 </style>
 </head>
 <body>
 
 <div class="box">
-<h2>Registro de prueba</h2>
+<h2>Registro</h2>
 <input type="text" id="name" placeholder="Nombre">
 <input type="email" id="email" placeholder="Correo">
 <input type="password" id="password" placeholder="Contraseña">
 <button id="registerBtn" type="button">Registrarse</button>
 <p id="status">No hay sesión iniciada</p>
+<a href="/login">¿Ya tienes cuenta? Inicia sesión</a>
 </div>
+
+<!-- Firebase UMD -->
+<script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-auth-compat.js"></script>
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
+  const firebaseConfig = {
+    apiKey: "AIzaSyAqprLLzZIfM2WnJsHISksgraZ2NJnQnRw",
+    authDomain: "calvogames-v1.firebaseapp.com",
+    projectId: "calvogames-v1",
+    storageBucket: "calvogames-v1.firebasestorage.app",
+    messagingSenderId: "490748488828",
+    appId: "1:490748488828:web:eb32857a4e203ce33b6df9",
+    measurementId: "G-334HNXG644"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+
   const btn = document.getElementById('registerBtn');
   const status = document.getElementById('status');
 
@@ -90,27 +113,29 @@ document.addEventListener('DOMContentLoaded', () => {
     const email = document.getElementById('email').value.trim();
     const pass = document.getElementById('password').value.trim();
 
-    // Validación simple
-    if (!name || !email || !pass) {
+    if(!name || !email || !pass){
       status.textContent = "Todos los campos son obligatorios.";
       status.className = "error";
       return;
     }
 
-    // Simulación de registro
     status.textContent = "Registrando usuario...";
-    status.className = "success";
+    status.className = "";
 
-    // Simulamos un "registro" con retraso para mostrar animación
-    setTimeout(() => {
-      if (email === "existente@test.com") {
-        status.textContent = "Error: El correo ya existe.";
-        status.className = "error";
-      } else {
-        status.textContent = "¡Usuario registrado correctamente!";
+    auth.createUserWithEmailAndPassword(email, pass)
+      .then(userCredential => {
+        return userCredential.user.updateProfile({ displayName: name });
+      })
+      .then(() => {
+        status.textContent = "¡Usuario registrado correctamente! Redirigiendo...";
         status.className = "success";
-      }
-    }, 1000);
+        setTimeout(() => { window.location.href = "/index.html"; }, 1500);
+      })
+      .catch(error => {
+        status.textContent = error.message;
+        status.className = "error";
+        console.error(error);
+      });
   });
 });
 </script>
