--- a/login/index.html
+++ b/login/index.html
@@ -1,136 +1,76 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login - Calvo Games</title>
-<style>
-body {
-  font-family: Arial;
-  background:#1e1e1e;
-  color:#fff;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-  margin:0;
-  flex-direction: column;
-}
-.box {
-  background:#2c2c2c;
-  padding:30px;
-  border-radius:12px;
-  width:320px;
-  text-align:center;
-}
-input {
-  width:90%;
-  padding:10px;
-  margin:8px 0;
-  border-radius:6px;
-  border:none;
-}
-button {
-  width:95%;
-  padding:10px;
-  margin:10px 0;
-  border-radius:6px;
-  border:none;
-  background:#ff9800;
-  color:#fff;
-  font-weight:bold;
-  cursor:pointer;
-  transition: all 0.2s ease;
-}
-button.active {
-  transform: scale(1.1);
-  background:#e68a00;
-}
-#status {
-  font-size:1em;
-  margin-top:15px;
-  padding:10px;
-  border-radius:6px;
-}
-.error {
-  background: #ff4c4c;
-  color: #fff;
-  font-weight:bold;
-}
-.success {
-  background: #4caf50;
-  color: #fff;
-  font-weight:bold;
-}
-a {
-  color:#ff9800;
-  text-decoration:none;
-  display:block;
-  margin-top:10px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Calvo Games</title>
+    <style>
+        :root { --primary: #ff9800; --bg: #1e1e1e; --card: #2c2c2c; }
+        body { font-family: 'Segoe UI', Arial; background: var(--bg); color: #fff; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .box { background: var(--card); padding: 40px; border-radius: 16px; width: 350px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.5); }
+        h2 { margin-bottom: 20px; color: var(--primary); }
+        input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 8px; border: 1px solid #444; background: #3d3d3d; color: white; box-sizing: border-box; }
+        button { width: 100%; padding: 12px; margin: 20px 0 10px; border-radius: 8px; border: none; background: var(--primary); color: #fff; font-weight: bold; cursor: pointer; font-size: 16px; transition: 0.3s; }
+        button:hover { background: #e68a00; transform: translateY(-2px); }
+        .status { min-height: 20px; font-size: 14px; padding: 10px; border-radius: 6px; display: none; }
+        .error { display: block; background: #ff4c4c; color: white; }
+        .success { display: block; background: #4caf50; color: white; }
+        a { color: var(--primary); text-decoration: none; font-size: 14px; }
+    </style>
 </head>
 <body>
+    <div class="box">
+        <h2>Iniciar Sesión</h2>
+        <input type="email" id="email" placeholder="Tu Correo">
+        <input type="password" id="password" placeholder="Tu Contraseña">
+        <button id="loginBtn">Entrar</button>
+        <p id="status" class="status"></p>
+        <a href="../register/index.html">¿No tienes cuenta? Regístrate gratis</a>
+        <br>
+        <a href="../index.html" style="opacity: 0.6;">Seguir como invitado</a>
+    </div>
 
-<div class="box">
-<h2>Iniciar sesión</h2>
-<input type="email" id="email" placeholder="Correo">
-<input type="password" id="password" placeholder="Contraseña">
-<button id="loginBtn" type="button">Iniciar sesión</button>
-<p id="status">No hay sesión iniciada</p>
-<a href="/register">¿No tienes cuenta? Regístrate</a>
-</div>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js";
+        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js";
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js";
+        const firebaseConfig = {
+            apiKey: "AIzaSyAqprLLzZIfM2WnJsHISksgraZ2NJnQnRw",
+            authDomain: "calvogames-v1.firebaseapp.com",
+            projectId: "calvogames-v1",
+            storageBucket: "calvogames-v1.firebasestorage.app",
+            messagingSenderId: "490748488828",
+            appId: "1:490748488828:web:eb32857a4e203ce33b6df9"
+        };
 
-const firebaseConfig = {
-  apiKey: "AIzaSyAqprLLzZIfM2WnJsHISksgraZ2NJnQnRw",
-  authDomain: "calvogames-v1.firebaseapp.com",
-  projectId: "calvogames-v1",
-  storageBucket: "calvogames-v1.firebasestorage.app",
-  messagingSenderId: "490748488828",
-  appId: "1:490748488828:web:eb32857a4e203ce33b6df9",
-  measurementId: "G-334HNXG644"
-};
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
 
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
+        const btn = document.getElementById('loginBtn');
+        const status = document.getElementById('status');
 
-const btn = document.getElementById('loginBtn');
-const status = document.getElementById('status');
+        btn.addEventListener('click', async () => {
+            const email = document.getElementById('email').value.trim();
+            const pass = document.getElementById('password').value;
 
-btn.addEventListener('click', async () => {
-  btn.classList.add('active');
-  setTimeout(() => btn.classList.remove('active'), 300);
+            if(!email || !pass) {
+                showMsg("Ingresa tus credenciales", "error");
+                return;
+            }
 
-  const email = document.getElementById('email').value.trim();
-  const pass = document.getElementById('password').value.trim();
+            try {
+                await signInWithEmailAndPassword(auth, email, pass);
+                showMsg("¡Bienvenido de nuevo!", "success");
+                setTimeout(() => window.location.href = "../index.html", 1500);
+            } catch (error) {
+                showMsg("Correo o contraseña incorrectos", "error");
+            }
+        });
 
-  if(!email || !pass){
-    status.textContent = "Todos los campos son obligatorios.";
-    status.className = "error";
-    return;
-  }
-
-  status.textContent = "Iniciando sesión...";
-  status.className = "";
-
-  try {
-    await signInWithEmailAndPassword(auth, email, pass);
-    status.textContent = "¡Sesión iniciada correctamente! Redirigiendo...";
-    status.className = "success";
-    setTimeout(() => {
-      window.location.href = "/calvogames/index.html";
-    }, 1500);
-  } catch(error) {
-    status.textContent = error.message;
-    status.className = "error";
-    console.error(error);
-  }
-});
-</script>
-
+        function showMsg(txt, type) {
+            status.textContent = txt;
+            status.className = `status ${type}`;
+        }
+    </script>
 </body>
 </html>
