--- a/register/index.html
+++ b/register/index.html
@@ -2,36 +2,26 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Calvo Games</title>
     <style>
-        :root { --primary: #ff9800; --bg: #1e1e1e; --card: #2c2c2c; }
-        body { font-family: 'Segoe UI', Arial; background: var(--bg); color: #fff; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .box { background: var(--card); padding: 40px; border-radius: 16px; width: 350px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.5); }
-        h2 { margin-bottom: 20px; color: var(--primary); }
-        input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 8px; border: 1px solid #444; background: #3d3d3d; color: white; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; margin: 20px 0 10px; border-radius: 8px; border: none; background: var(--primary); color: #fff; font-weight: bold; cursor: pointer; font-size: 16px; transition: 0.3s; }
-        button:hover { background: #e68a00; transform: translateY(-2px); }
-        .status { min-height: 20px; font-size: 14px; padding: 10px; border-radius: 6px; display: none; }
-        .error { display: block; background: #ff4c4c; color: white; }
-        .success { display: block; background: #4caf50; color: white; }
-        a { color: var(--primary); text-decoration: none; font-size: 14px; }
-        .loader { display: none; border: 3px solid #f3f3f3; border-top: 3px solid var(--primary); border-radius: 50%; width: 20px; height: 20px; animation: spin 1s linear infinite; margin: 0 auto; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        body { font-family: sans-serif; background: #1a1a1a; color: white; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .card { background: #252525; padding: 2rem; border-radius: 10px; width: 300px; box-shadow: 0 4px 15px rgba(0,0,0,0.5); text-align: center; }
+        input { width: 90%; padding: 10px; margin: 10px 0; border-radius: 5px; border: none; background: #333; color: white; }
+        button { width: 100%; padding: 10px; background: #ff9800; border: none; color: white; font-weight: bold; cursor: pointer; border-radius: 5px; margin-top: 10px; }
+        #msg { margin-top: 10px; font-size: 14px; }
+        .err { color: #ff5555; }
+        .ok { color: #55ff55; }
     </style>
 </head>
 <body>
-    <div class="box">
+    <div class="card">
         <h2>Crear Cuenta</h2>
-        <input type="text" id="name" placeholder="Tu Nombre de Jugador">
-        <input type="email" id="email" placeholder="Correo Electrónico">
-        <input type="password" id="password" placeholder="Contraseña (mín. 6 caracteres)">
-        <button id="registerBtn">Registrarse Ahora</button>
-        <div id="loader" class="loader"></div>
-        <p id="status" class="status"></p>
-        <a href="../login/index.html">¿Ya tienes cuenta? Inicia sesión</a>
-        <br>
-        <a href="../index.html" style="opacity: 0.6;">Volver a la web sin registro</a>
+        <input type="text" id="reg-name" placeholder="Nombre de usuario">
+        <input type="email" id="reg-email" placeholder="Correo electrónico">
+        <input type="password" id="reg-pass" placeholder="Contraseña">
+        <button id="btn-reg">Registrarse</button>
+        <div id="msg"></div>
+        <p><a href="../login/index.html" style="color: #ff9800; text-decoration: none;">¿Ya tienes cuenta?</a></p>
     </div>
 
     <script type="module">
@@ -52,45 +42,33 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        const btn = document.getElementById('registerBtn');
-        const status = document.getElementById('status');
-        const loader = document.getElementById('loader');
-
-        btn.addEventListener('click', async () => {
-            const name = document.getElementById('name').value.trim();
-            const email = document.getElementById('email').value.trim();
-            const pass = document.getElementById('password').value;
-
-            if(!name || !email || !pass) {
-                showMsg("Rellena todos los campos", "error");
-                return;
-            }
-
-            btn.style.display = 'none';
-            loader.style.display = 'block';
+        document.getElementById('btn-reg').onclick = async () => {
+            const name = document.getElementById('reg-name').value;
+            const email = document.getElementById('reg-email').value;
+            const pass = document.getElementById('reg-pass').value;
+            const msg = document.getElementById('msg');
 
             try {
-                const userCredential = await createUserWithEmailAndPassword(auth, email, pass);
-                await updateProfile(userCredential.user, { displayName: name });
-                await setDoc(doc(db, "users", userCredential.user.uid), {
-                    name: name,
+                // 1. Crea el usuario en Firebase Auth
+                const res = await createUserWithEmailAndPassword(auth, email, pass);
+                
+                // 2. Le pone el nombre al perfil
+                await updateProfile(res.user, { displayName: name });
+
+                // 3. Guarda los datos en la base de datos Firestore
+                await setDoc(doc(db, "users", res.user.uid), {
+                    username: name,
                     email: email,
-                    createdAt: new Date()
+                    created: new Date()
                 });
 
-                showMsg("¡Cuenta creada! Entrando...", "success");
-                setTimeout(() => window.location.href = "../index.html", 1500);
-            } catch (error) {
-                btn.style.display = 'block';
-                loader.style.display = 'none';
-                showMsg(error.message, "error");
-            }
-        });
+                msg.innerHTML = "<span class='ok'>¡Éxito! Redirigiendo...</span>";
+                setTimeout(() => window.location.href = "/index.html", 2000);
 
-        function showMsg(txt, type) {
-            status.textContent = txt;
-            status.className = `status ${type}`;
-        }
+            } catch (e) {
+                msg.innerHTML = `<span class='err'>${e.message}</span>`;
+            }
+        };
     </script>
 </body>
 </html>
