--- a/register/index.html
+++ b/register/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Registro - Calvo Games</title>
     <style>
-        body { background-color: #1a1a1a; color: white; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .card { background: #252525; padding: 30px; border-radius: 10px; width: 300px; text-align: center; border: 1px solid #333; }
-        input { width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: none; background: #333; color: white; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; background: #ff9800; border: none; color: white; font-weight: bold; cursor: pointer; border-radius: 5px; margin-top: 15px; }
-        #status { margin-top: 15px; font-size: 14px; color: #ff9800; }
+        body { background: #1a1a1a; color: white; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .card { background: #252525; padding: 30px; border-radius: 10px; width: 300px; text-align: center; }
+        input { width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #444; background: #333; color: white; box-sizing: border-box; }
+        button { width: 100%; padding: 12px; background: #ff9800; border: none; color: white; font-weight: bold; cursor: pointer; border-radius: 5px; margin-top: 10px; }
+        button:active { transform: scale(0.98); }
+        #status { margin-top: 15px; font-size: 13px; color: #ff9800; background: rgba(0,0,0,0.3); padding: 5px; border-radius: 4px; }
     </style>
 </head>
 <body>
@@ -19,8 +20,7 @@
         <input type="email" id="email" placeholder="Correo electrónico">
         <input type="password" id="password" placeholder="Contraseña">
         <button id="registerBtn">Registrarse</button>
-        <div id="status">Esperando datos...</div>
-        <p><a href="../login/index.html" style="color:gray; font-size: 12px;">¿Ya tienes cuenta? Entra aquí</a></p>
+        <div id="status">Listo para registrar</div>
     </div>
 
     <script type="module">
@@ -28,6 +28,7 @@
         import { getAuth, createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js";
         import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore.js";
 
+        // CONFIGURACIÓN (Verifica que sea la tuya)
         const firebaseConfig = {
             apiKey: "AIzaSyAqprLLzZIfM2WnJsHISksgraZ2NJnQnRw",
             authDomain: "calvogames-v1.firebaseapp.com",
@@ -41,39 +42,44 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        // Usamos window.onload para asegurar que el botón existe antes de asignarle el click
-        window.onload = () => {
-            const btn = document.getElementById('registerBtn');
-            const status = document.getElementById('status');
+        // Referencia al botón
+        const btn = document.getElementById('registerBtn');
+        const statusMsg = document.getElementById('status');
 
-            btn.onclick = async () => {
-                const name = document.getElementById('name').value;
-                const email = document.getElementById('email').value;
-                const pass = document.getElementById('password').value;
+        btn.addEventListener('click', async () => {
+            console.log("Botón presionado..."); // ESTO DEBE SALIR EN F12
+            
+            const name = document.getElementById('name').value.trim();
+            const email = document.getElementById('email').value.trim();
+            const pass = document.getElementById('password').value.trim();
 
-                if(!name || !email || !pass) {
-                    status.innerText = "⚠️ Rellena todos los campos";
-                    return;
-                }
+            if (!name || !email || !pass) {
+                statusMsg.innerText = "❌ Faltan datos";
+                return;
+            }
 
-                status.innerText = "Procesando...";
+            statusMsg.innerText = "⏳ Conectando con Firebase...";
 
-                try {
-                    const userCredential = await createUserWithEmailAndPassword(auth, email, pass);
-                    await updateProfile(userCredential.user, { displayName: name });
-                    await setDoc(doc(db, "users", userCredential.user.uid), {
-                        nombre: name,
-                        correo: email,
-                        fecha: new Date()
-                    });
-                    status.innerText = "✅ ¡Registrado! Redirigiendo...";
-                    setTimeout(() => window.location.href = "../index.html", 2000);
-                } catch (error) {
-                    status.innerText = "❌ Error: " + error.message;
-                    console.error(error);
-                }
-            };
-        };
+            try {
+                const userCred = await createUserWithEmailAndPassword(auth, email, pass);
+                console.log("Usuario creado en Auth");
+
+                await updateProfile(userCred.user, { displayName: name });
+                
+                await setDoc(doc(db, "users", userCred.user.uid), {
+                    username: name,
+                    email: email,
+                    createdAt: new Date()
+                });
+
+                statusMsg.innerText = "✅ ¡Registrado! Redirigiendo...";
+                setTimeout(() => window.location.href = "../index.html", 2000);
+
+            } catch (error) {
+                console.error("ERROR DETECTADO:", error.code);
+                statusMsg.innerText = "Error: " + error.message;
+            }
+        });
     </script>
 </body>
 </html>
