--- a/register/index.html
+++ b/register/index.html
@@ -9,19 +9,16 @@
         input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 6px; border: 1px solid #444; background: #333; color: white; box-sizing: border-box; }
         button { width: 100%; padding: 12px; background: #ff9800; border: none; color: white; font-weight: bold; cursor: pointer; border-radius: 6px; margin-top: 10px; }
         #status { margin-top: 15px; font-size: 14px; color: #ff9800; min-height: 20px; }
-        a { color: #aaa; font-size: 12px; text-decoration: none; display: block; margin-top: 15px; }
     </style>
 </head>
 <body>
-
     <div class="card">
-        <h2>Registro</h2>
+        <h2>Crear Cuenta</h2>
         <input type="text" id="name" placeholder="Nombre de usuario">
         <input type="email" id="email" placeholder="Correo">
         <input type="password" id="password" placeholder="Contraseña">
-        <button id="registerBtn">Crear Cuenta</button>
-        <div id="status">Cargando sistema...</div>
-        <a href="../index.html">Volver al inicio</a>
+        <button id="registerBtn">Registrarse</button>
+        <div id="status">Cargando...</div>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -29,61 +26,50 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
     <script>
-        // Esperamos a que todo cargue
-        window.addEventListener('load', function() {
-            const statusMsg = document.getElementById('status');
-            
-            if (typeof firebase === 'undefined') {
-                statusMsg.innerText = "❌ Error de conexión. Reintenta.";
-                return;
-            }
+        const firebaseConfig = {
+            apiKey: "AIzaSyAqprLLzZIfM2WnJsHISksgraZ2NJnQnRw",
+            authDomain: "calvogames-v1.firebaseapp.com",
+            projectId: "calvogames-v1",
+            storageBucket: "calvogames-v1.firebasestorage.app",
+            messagingSenderId: "490748488828",
+            appId: "1:490748488828:web:eb32857a4e203ce33b6df9"
+        };
 
-            statusMsg.innerText = "✅ Sistema listo";
-
-            const firebaseConfig = {
-                apiKey: "AIzaSyAqprLLzZIfM2WnJsHISksgraZ2NJnQnRw",
-                authDomain: "calvogames-v1.firebaseapp.com",
-                projectId: "calvogames-v1",
-                storageBucket: "calvogames-v1.firebasestorage.app",
-                messagingSenderId: "490748488828",
-                appId: "1:490748488828:web:eb32857a4e203ce33b6df9"
-            };
-
+        window.onload = () => {
             firebase.initializeApp(firebaseConfig);
             const auth = firebase.auth();
             const db = firebase.firestore();
+            const status = document.getElementById('status');
+            status.innerText = "✅ Sistema listo";
 
-            document.getElementById('registerBtn').onclick = async function() {
+            document.getElementById('registerBtn').onclick = async () => {
                 const name = document.getElementById('name').value.trim();
                 const email = document.getElementById('email').value.trim();
-                const pass = document.getElementById('password').value.trim();
+                const pass = document.getElementById('password').value;
 
-                if (!name || !email || !pass) {
-                    statusMsg.innerText = "⚠️ Rellena todo";
-                    return;
-                }
-
-                statusMsg.innerText = "⏳ Registrando...";
+                if(!name || !email || !pass) { status.innerText = "❌ Faltan datos"; return; }
+                status.innerText = "⏳ Registrando...";
 
                 try {
+                    // Verificar si el nombre ya existe
+                    const nameCheck = await db.collection("users").where("username_low", "==", name.toLowerCase()).get();
+                    if(!nameCheck.empty) { status.innerText = "❌ El nombre ya existe"; return; }
+
                     const userCred = await auth.createUserWithEmailAndPassword(email, pass);
                     await userCred.user.updateProfile({ displayName: name });
                     
                     await db.collection("users").doc(userCred.user.uid).set({
                         username: name,
+                        username_low: name.toLowerCase(),
                         email: email,
                         createdAt: firebase.firestore.FieldValue.serverTimestamp()
                     });
 
-                    statusMsg.innerText = "✅ ¡Listo! Redirigiendo...";
-                    // IMPORTANTE: Asegúrate de que la ruta sea correcta según tu carpeta en GitHub
-                    setTimeout(() => { window.location.href = "../index.html"; }, 2000);
-
-                } catch (error) {
-                    statusMsg.innerText = "❌ " + error.message;
-                }
+                    status.innerText = "✅ ¡Éxito! Redirigiendo...";
+                    setTimeout(() => location.href = "../index.html", 2000);
+                } catch (e) { status.innerText = "❌ " + e.message; }
             };
-        });
+        };
     </script>
 </body>
 </html>
