--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ img.ProseMirror-separator {
     }
 
     const mainAuth = firebase.auth();
-    const ADMIN_EMAILS = ["tu-correo@gmail.com"]; // PON AQUÍ TU CORREO
+    const ADMIN_EMAILS = ["keray.mendez@gmail.com"]; // 
 
     mainAuth.onAuthStateChanged((user) => {
         const letraImg = document.getElementById('user-letra');
