--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Control | Calvo Games</title>
-    <link rel="icon" href="/CalvoGames_files/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/Calvo Games_files/favicon.ico" type="image/x-icon">
     
     <style>
         body { background-color: #0f0f0f; color: #eee; font-family: 'Segoe UI', sans-serif; margin: 0; padding: 20px; }
@@ -136,5 +136,6 @@
 </script>
 </body>
 </html>
+
 
 
