--- a/login/index.html
+++ b/login/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="CalvoGames_files/favicon.ico" type="image/ico">
+    <link rel="icon" href="Calvo Games_files/favicon.ico" type="image/ico">
     <title>Login - Calvo Games</title>
     <style>
         body { background: #1a1a1a; color: white; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
@@ -66,4 +66,5 @@
     </script>
 </body>
 </html>
+
 
