--- a/register/index.html
+++ b/register/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Registro - Calvo Games</title>
+    <title>Registro | Calvo Games</title>
     <link rel="shortcut icon" href="/Calvo Games_files/favicon.ico" type="image/x-icon">
     <style>
         body { background: #1a1a1a; color: white; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
@@ -74,4 +74,5 @@
     </script>
 </body>
 </html>
+
 
