--- a/login/index.html
+++ b/login/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="Calvo Games_files/favicon.ico" type="image/ico">
-    <title>Login - Calvo Games</title>
+    <title>Login | Calvo Games</title>
+    <link rel="icon" href="/Calvo Games_files/favicon.ico" type="image/x-icon">
     <style>
         body { background: #1a1a1a; color: white; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
         .card { background: #252525; padding: 30px; border-radius: 12px; width: 320px; text-align: center; }
@@ -66,5 +66,6 @@
     </script>
 </body>
 </html>
+
 
 
