--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-  <meta property="og:title" content="CalvoGames – Juegos indie gratis">
+  <meta property="og:title" content="CalvoGames">
   <meta property="og:description" content="Juegos indie en desarrollo con descarga directa y próximos lanzamientos.">
   <meta property="og:image" content="https://calvogames.pages.dev/preview.png">
   <meta property="og:url" content="https://calvogames.pages.dev">
