--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@ img.ProseMirror-separator {
 </style>
 
 <div id="perfil-flotante-cg">
-    <div class="avatar-circulo-cg" id="cg-avatar-main" onclick="irAConfiguracion()" style="background: rgb(255, 152, 0); cursor: pointer;">
+    <div class="avatar-circulo-cg" id="cg-avatar-main" onclick="gestionarRedireccion()" style="background: rgb(255, 152, 0); cursor: pointer; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; overflow: hidden;">
         <span id="cg-user-letra">?</span>
-        <img id="cg-user-foto" src="" style="display: none; width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        <img id="cg-user-foto" src="" style="display: none; width: 100%; height: 100%; object-fit: cover;">
     </div>
 
     <div class="avatar-info-cg">
