--- a/index.html
+++ b/index.html
@@ -203,10 +203,12 @@ img.ProseMirror-separator {
 </style>
 
 <div id="perfil-flotante-cg">
-    <div class="avatar-circulo-cg" id="cg-avatar-main" onclick="gestionarRedireccion()" style="background: rgb(255, 152, 0); cursor: pointer; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-        <span id="cg-user-letra">?</span>
-        <img id="cg-user-foto" src="" style="display: none; width: 100%; height: 100%; object-fit: cover;">
-    </div>
+    <a href="editar-perfil.html" id="cg-link-avatar" style="text-decoration: none;">
+        <div class="avatar-circulo-cg" id="cg-avatar-main" style="background: rgb(255, 152, 0); cursor: pointer; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+            <span id="cg-user-letra" style="color: white; font-weight: bold; font-size: 20px;">?</span>
+            <img id="cg-user-foto" src="" style="display: none; width: 100%; height: 100%; object-fit: cover;">
+        </div>
+    </a>
 
     <div class="avatar-info-cg">
         <span class="avatar-nombre-cg" id="cg-user-name">Invitado</span>
